# chip-spv-stale

./: CMakeLists.txt  README.md
include/hip/: spirv_hip.hh
samples/: CMakeLists.txt
samples/structsize/: CMakeLists.txt  run-structsize.cmake  structsize.cc  structsize.xstdout
src/: CHIPBackend.cc  CHIPBindings.cc
src/backend/Level0/: CHIPBackendLevel0.cc
src/backend/OpenCL/: CHIPBackendOpenCL.cc
